replace lmdb storage and align adapters