@@ -15,12 +15,6 @@ dependencies {
 }
 
 tasks.named<JavaCompile>("compileJava").configure {
-    options.release.set(21)
+    options.release.set(17)
 }
 
-tasks.named<JavaExec>("run").configure {
-    jvmArgs(
-        "--add-opens", "java.base/java.nio=ALL-UNNAMED",
-        "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED"
-    )
-}
